[gd_scene load_steps=4 format=3 uid="uid://cekibg67ll74e"]

[ext_resource type="Theme" uid="uid://c4lkfm562pmc7" path="res://resources/themes/StandardTheme.tres" id="1_vmb0y"]
[ext_resource type="Script" path="res://almanac/archetype/archetype_detailed_view.gd" id="2_8g8hj"]

[sub_resource type="Theme" id="Theme_pxs2w"]
default_font_size = 36

[node name="ArchetypeDetailedView" type="HBoxContainer"]
custom_minimum_size = Vector2(335, 375)
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_vmb0y")
script = ExtResource("2_8g8hj")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MainContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ArchetypeNameLabel" type="Label" parent="PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
theme = SubResource("Theme_pxs2w")
text = "Archetype Name"
horizontal_alignment = 1

[node name="ArchetypePicksContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="ArchetypeIconContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
alignment = 1
